--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,1 +1,9 @@
-{}
+{
+  "video": {
+    "mylivestream": {
+      "service": "video",
+      "serviceType": "livestream",
+      "providerPlugin": "awscloudformation"
+    }
+  }
+}
