--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "@angular/router": "~9.1.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "video.js": "^7.8.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.6",
     "@angular/cli": "~9.1.6",
     "@angular/compiler-cli": "~9.1.7",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "@types/video.js": "^7.3.10",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
